# gws-builder

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: BUILD_PLAN.md
examples/: consumer_whitelist.rs  generate_google.rs  generate_here.rs
src/: catalog.rs  discovery.rs  emit.rs  error.rs  fetch.rs  lib.rs  manifest.rs
src/codegen/: actions.rs  enums.rs  methods.rs  mod.rs  naming.rs  structs.rs
src/ir/: filter.rs  mod.rs  resolve.rs  transform.rs  types.rs
tests/: minimal_pipeline.rs
