[package]
name = "gws-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
quote = "1"
proc-macro2 = "1"
syn = "2"
thiserror = "2"
prettyplease = "0.2"
heck = "0.5"
sha2 = "0.10"
[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
