[package]
name = "gws-builder"
version = "0.1.1"
edition = "2024"
description = "Build-time codegen from Google API Discovery: Rust types, method metadata, and serde helpers for Workspace agents."
license = "MIT OR Apache-2.0"
repository = "https://github.com/janpauldahlke/gws-builder"
documentation = "https://docs.rs/gws-builder"
readme = "README.md"
keywords = ["google", "workspace", "discovery", "codegen", "api"]
categories = ["development-tools::build-utils"]
exclude = ["/generated", ".env"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
quote = "1"
proc-macro2 = "1"
syn = "2"
thiserror = "2"
prettyplease = "0.2"
heck = "0.5"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
